# steam-clone

./: .gitignore  Caddyfile  docker-compose.yml  key  key.pub  pyproject.toml
api/: Dockerfile  pom.xml
api/src/main/java/com/steamclone/api/: SteamCloneApiApplication.java
api/src/main/java/com/steamclone/api/config/: CorsConfig.java  SecurityConfig.java
api/src/main/java/com/steamclone/api/model/: Game.java  User.java
api/src/main/java/com/steamclone/api/repository/: GameRepository.java  UserRepository.java
api/src/main/java/com/steamclone/api/security/: JwtAuthenticationFilter.java  JwtService.java
api/src/main/java/com/steamclone/api/service/: GameService.java  UserService.java
api/src/main/java/com/steamclone/api/storage/: StorageService.java
api/src/main/java/com/steamclone/api/web/: AuthController.java  CatalogController.java
api/src/main/java/com/steamclone/api/web/dto/: AuthDtos.java  GameDtos.java
api/src/main/resources/: application.yml
backend/: settings.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.jsx  index.css  main.ts
frontend/src/components/: Navbar.jsx  Navbar.vue
frontend/src/router/: index.ts
frontend/src/views/: HomeView.vue
